crud operation on album table.

--- a/middle-test/.settings/org.eclipse.core.resources.prefs
+++ b/middle-test/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/controllers/AlbumController.java=UTF-8
+encoding//src/controllers/HomeController.java=UTF-8
 encoding//src/views/albumFrame.java=UTF-8
 encoding//src/views/baihatFrame.java=UTF-8
 encoding//src/views/casiFrame.java=UTF-8
