crud operation on casi table.

--- a/middle-test/.settings/org.eclipse.core.resources.prefs
+++ b/middle-test/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/common/events/CaSiButtonEvents.java=UTF-8
 encoding//src/controllers/AlbumController.java=UTF-8
 encoding//src/controllers/HomeController.java=UTF-8
 encoding//src/views/albumFrame.java=UTF-8
